Add the Frecnh translation of the dpkg-architecture.1 man page.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,11 @@
+2006-08-05  Nicolas Francois  <nicolas.francois@centraliens.net>
+
+	* po4a/dpkg-architecture.1/po/fr.po: New translation.
+	* po4a/add_fr/dpkg-architecture.1.fr.add: Addendum for the new
+	translation.
+	* po4a/dpkg-architecture.1/dpkg-architecture.1.cfg: Add the `fr'
+	language.
+
 2006-08-02  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po4a/dpkg.1/dpkg.1.cfg: Add the `de' language.
