--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -5,6 +5,12 @@
 	translation.
 	* po4a/dpkg-architecture.1/dpkg-architecture.1.cfg: Add the `fr'
 	language.
+	* C/dpkg-source.1: Typo fix.
+	* C/dpkg-architecture.1: Likewise.
+	* po4a/dpkg-source.1/po/dpkg-source.1.pot: Regenerated.
+	* man/po4a/dpkg-architecture.1/po/dpkg-architecture.1.pot: Likewise.
+	* man/po4a/dpkg-source.1/po/*.po: Merge with pot file.
+	* man/po4a/dpkg-architecture.1/po/*.po: Likewise.
 
 2006-08-02  Helge Kreutzmann  <debian@helgefjell.de>
 
