Add the German translation of the dpkg-architecture.1 manpage, and the initialisation of the translations of the dselect.1, dpkg-source.1, dpkg-query.1, install-info.8, dpkg-deb.1, and dpkg-split.1 manpages.

--- a/debian/changelog
+++ b/debian/changelog
@@ -38,6 +38,10 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
     - dpkg.1. Closes: #381047
     - dpkg-divert.8. CLoses: #380660
     - deb-control.5. Closes: #380443
+    - dpkg-architecture.1. CLoses: #381349
+    - initialisation of the dselect.1, dpkg-source.1, dpkg-query.1,
+      install-info.8, dpkg-deb.1, and dpkg-split.1 translations.
+      Closes: #381488
   * Japanese (KISE Hiroshi). Closes: 381141
     - 822-date.1
     - deb.5
