--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,24 @@
+2006-08-05  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* po4a/dpkg-architecture.1/po/de.po: New translation.
+	* po4a/dselect.1/po/de.po: Initialisation of the German
+	translation. 44t84u.
+	* po4a/dpkg-source.1/po/de.po: Likewise. 70t3f140u.
+	* po4a/dpkg-query.1/po/de.po: Likewise. 18t40u.
+	* po4a/install-info.8/po/de.po: Likewise. 22t47u.
+	* po4a/dpkg-deb.1/po/de.po: Likewise. 30t48u.
+	* po4a/dpkg-split.1/po/de.po: Likewise. 30t51u.
+	* po4a/add_de/dpkg-architecture.1.de.add: Addendum for the new
+	translation.
+	* po4a/dpkg-architecture.1/dpkg-architecture.1.cfg: Add the `de'
+	language.
+	* po4a/dselect.1/dselect.1.cfg: Likewise.
+	* po4a/dpkg-source.1/dpkg-source.1.cfg: Likewise.
+	* po4a/dpkg-query.1/dpkg-query.1.cfg: Likewise.
+	* po4a/install-info.8/install-info.8.cfg: Likewise.
+	* po4a/dpkg-deb.1/dpkg-deb.1.cfg: Likewise.
+	* po4a/dpkg-split.1/dpkg-split.1.cfg: Likewise.
+
 2006-08-05  Nicolas Francois  <nicolas.francois@centraliens.net>
 
 	* po4a/dpkg-architecture.1/po/fr.po: New translation.
