Updated German translation for the dpkg-architecture man page.

--- a/man/po4a/dpkg-architecture.1/po/de.po
+++ b/man/po4a/dpkg-architecture.1/po/de.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-08-05 22:28+0200\n"
-"PO-Revision-Date: 2006-08-03 22:02+0200\n"
+"PO-Revision-Date: 2006-08-06 14:57+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -77,17 +77,15 @@ msgstr ""
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-architecture.1:17
-#, fuzzy
 msgid ""
 "The build architecture is always determined by an external call to B<dpkg>"
 "(1), and can not be set at the command line."
 msgstr ""
-"Die Bau-Architektur wird immer über einen externen Aufruf an Dpkg bestimmt "
-"und kann nicht auf der Kommandozeile gesetzt werden."
+"Die Bau-Architektur wird immer über einen externen Aufruf an B<dpkg>(1) "
+"bestimmt und kann nicht auf der Kommandozeile gesetzt werden."
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-architecture.1:26
-#, fuzzy
 msgid ""
 "You can specify the host architecture by providing one or both of the "
 "options B<-a> and B<-t>. The default is determined by an external call to "
@@ -99,12 +97,12 @@ msgid ""
 msgstr ""
 "Sie können die Host-Architektur (Gast-Architektur) spezifizieren, indem Sie "
 "eine oder beide der Optionen B<-a> oder B<-t> verwenden. Der Standardwert "
-"wird über einen externen Aufruf an Gcc ermittelt oder ist der gleiche falls "
-"sowohl \\s-1CC\\s0 als auch gcc nicht verfügbar sind. Einer von B<-a> oder "
-"B<-t> ist ausreichend, der Wert des anderen wird auf einen brauchbaren Wert "
-"gesetzt. Tatsächlich ist es oft besser nur einen der beiden anzugeben, da "
-"B<dpkg-architecture> Sie warnen wird, falls Ihre Wahl nicht mit dem "
-"Standardwert übereinstimmt."
+"wird über einen externen Aufruf an B<gcc>(1) ermittelt oder ist identisch mit "
+"der Bauarchitektur, falls sowohl \\s-1CC\\s0 als auch Gcc nicht verfügbar "
+"sind. Einer von B<-a> oder B<-t> ist ausreichend, der Wert des anderen wird "
+"auf einen brauchbaren Wert gesetzt. Tatsächlich ist es oft besser nur einen "
+"der beiden anzugeben, da B<dpkg-architecture> Sie warnen wird, falls Ihre "
+"Wahl nicht mit dem Standardwert übereinstimmt."
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-architecture.1:27
@@ -142,7 +140,6 @@ msgstr "B<-f>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-architecture.1:41
-#, fuzzy
 msgid ""
 "Values set by existing environment variables with the same name as used by "
 "the scripts are honored (i.e. used by BE<lt>dpkg-architectureE<gt>), except "
@@ -151,10 +148,11 @@ msgid ""
 "example B<dpkg-buildpackage>(1))."
 msgstr ""
 "Existierende Umgebungsvariablen mit dem gleichen Namen wie vom Skript "
-"verwendet werden nicht überschrieben, es sei denn, die »force«-Markierung "
-"ist gesetzt. Dies erlaubt es dem Benutzer einen Wert zu überschreiben, "
-"selbst wenn der Aufruf von B<dpkg-architecture> tief in einem anderen Skript "
-"versteckt ist (beispielsweise B<dpkg-buildpackage>)."
+"verwendet werden nicht überschrieben (d.h. sie werden von BE<lt>dpkg-"
+"architectureE<gt> verwendet), es sei denn, die »force«-Markierung ist "
+"gesetzt. Dies erlaubt es dem Benutzer einen Wert zu überschreiben, selbst "
+"wenn der Aufruf von B<dpkg-architecture> tief in einem anderen Skript "
+"versteckt ist (beispielsweise B<dpkg-buildpackage>(1))."
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-architecture.1:42
@@ -185,7 +183,6 @@ msgstr "B<-e>I<Debian-Architektur>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-architecture.1:53
-#, fuzzy
 msgid ""
 "Check for equality of architecture. By default I<debian-architecture> is "
 "compared against the current Debian architecture, being the host.  This "
@@ -194,7 +191,7 @@ msgid ""
 msgstr ""
 "Überprüfe auf Gleichheit der Architekturen. Standardmäßig wird I<Debian-"
 "Architektur> gegen die aktuelle Debian-Architektur auf dem Host geprüft. "
-"Dies Option expandiert nicht die Architektur-Platzhalter (Wildcards). Der "
+"Diese Aktion expandiert nicht die Architektur-Platzhalter (Wildcards). Der "
 "Befehl beendet sich mit einem Exit-Status von 0, falls eine Übereinstimmung "
 "besteht, andernfalls mit 1."
 
@@ -219,7 +216,7 @@ msgstr ""
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-architecture.1:59
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-q>I<variable-name>"
 msgstr "B<-q>I<Variablenname>"
 
@@ -371,14 +368,14 @@ msgstr "\\s-1GNU\\s0-Systemtyp"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-architecture.1:99
-#, fuzzy
 msgid ""
 "An architecture specification string consisting of two parts separated by a "
 "dash: cpu and system. Examples: i386-linux-gnu, sparc-linux-gnu, i386-gnu, "
 "x86_64-netbsd."
 msgstr ""
-"Eine Architektur-Spezifikations-Zeichenkette besteht aus zwei Teilen, CPU-"
-"System. Beispiele: i386-linux-gnu, sparc-linux-gnu, i386-gnu, x86_64-netbsd."
+"Eine Architektur-Spezifikations-Zeichenkette besteht aus zwei, durch einen "
+"Bindestrich getrennten Teilen: CPU und System. Beispiele: i386-linux-gnu, "
+"sparc-linux-gnu, i386-gnu, x86_64-netbsd."
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-architecture.1:100
@@ -408,11 +405,11 @@ msgstr "eval \\`dpkg-architecture CW<\\*(C`-u\\*(C'>\\`"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-architecture.1:110
-#, fuzzy
 msgid ""
 "Check if an architecture is equal to the current architecture or a given one:"
 msgstr ""
-"Überprüfe, ob die aktuelle Architektur oder eine übergebene identisch sind:"
+"Überprüfe, ob eine Architektur identisch zu der aktuellen Architektur oder "
+"einer übergebenen ist:"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-architecture.1:112
@@ -426,13 +423,12 @@ msgstr "dpkg-architecture -amips -elinux-mips"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-architecture.1:117
-#, fuzzy
 msgid ""
 "Check if the current architecture or an architecture provided with -a are "
 "Linux systems:"
 msgstr ""
-"Überprüfe, ob die aktuelle Architektur oder eine übergebene Linux-Systeme "
-"sind:"
+"Überprüfe, ob die aktuelle oder eine mit -a übergebene Architektur Linux-"
+"Systeme sind:"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-architecture.1:119
@@ -518,9 +514,8 @@ msgstr "\\s-1DEB_BUILD_GNU_SYSTEM\\s0"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-architecture.1:136
-#, fuzzy
 msgid "The System part of \\s-1DEB_BUILD_GNU_TYPE\\s0."
-msgstr "Der System-Teil von \\s-1DEB_BUILD_GNU_TYPE\\s0"
+msgstr "Der System-Teil von \\s-1DEB_BUILD_GNU_TYPE\\s0."
 
 # type: IP
 #: ../../../man/po4a/../C/dpkg-architecture.1:136
@@ -574,9 +569,8 @@ msgstr "\\s-1DEB_HOST_GNU_CPU\\s0"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-architecture.1:146
-#, fuzzy
 msgid "The \\s-1CPU\\s0 part of \\s-1DEB_HOST_GNU_TYPE\\s0."
-msgstr "Der \\s-1CPU\\s0-Teil von \\s-1DEB_HOST_GNU_TYPE\\s0"
+msgstr "Der \\s-1CPU\\s0-Teil von \\s-1DEB_HOST_GNU_TYPE\\s0."
 
 # type: IP
 #: ../../../man/po4a/../C/dpkg-architecture.1:146
@@ -586,9 +580,8 @@ msgstr "\\s-1DEB_HOST_GNU_SYSTEM\\s0"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-architecture.1:148
-#, fuzzy
 msgid "The System part of \\s-1DEB_HOST_GNU_TYPE\\s0."
-msgstr "Der System-Teil von \\s-1DEB_HOST_GNU_TYPE\\s0"
+msgstr "Der System-Teil von \\s-1DEB_HOST_GNU_TYPE\\s0."
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-architecture.1:149
@@ -699,7 +692,6 @@ msgstr ""
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-architecture.1:202
-#, fuzzy
 msgid ""
 "In general, calling dpkg in the rules file to get architecture information "
 "is deprecated (unless you want to provide backward compatibility, see "
@@ -707,7 +699,7 @@ msgid ""
 "have Debian architectures which don't equal a processor name."
 msgstr ""
 "Im allgemeinen wird der Aufruf von Dpkg in der »rules«-Datei, um Architektur-"
-"Informationen zu erhalten, abgelehnt (bis Sie Rückwärtskompatibilität "
+"Informationen zu erhalten, abgelehnt (falls Sie Rückwärtskompatibilität "
 "bereitstellen wollen, siehe unten). Insbesondere die --print-architecture-"
 "Option ist unzuverlässig, da wir Debian-Architekturen haben, die nicht mit "
 "einem Prozessornamen übereinstimmen."
