Remove linux-alpha from the architecture wildcard examples. Regenerate the POT and update the POs.

--- a/man/C/dpkg-architecture.1
+++ b/man/C/dpkg-architecture.1
@@ -91,7 +91,7 @@ The Debian architecture string, which specifies the binary tree in the
 .IP "architecture wildcard" 4
 An architecture wildcard is a special architecture string that will match
 any real architecture being part of it. The general form is <kernel>\-<cpu>.
-Examples: linux\-any, linux\-alpha, any\-i386, hurd\-any.
+Examples: linux\-any, any\-i386, hurd\-any.
 .IP "\s-1GNU\s0 system type" 4
 An architecture specification string consisting of two parts separated by
 a dash: cpu and system. Examples: i386\-linux\-gnu, sparc\-linux\-gnu,
