--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,10 @@
+2006-08-05  Nicolas Francois  <nicolas.francois@centraliens.net>
+
+	* C/dpkg-architecture.1: Remove linux-alpha from the architecture
+	wildcard examples.
+	* man/po4a/dpkg-architecture.1/po/dpkg-architecture.1.pot: Regenerated.
+	* man/po4a/dpkg-architecture.1/po/*.po: Merge with pot file.
+
 2006-08-05  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po4a/dpkg-architecture.1/po/de.po: New translation.
