--- a/man/po4a/dpkg-architecture.1/po/de.po
+++ b/man/po4a/dpkg-architecture.1/po/de.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-08-05 22:28+0200\n"
+"POT-Creation-Date: 2006-08-06 15:40+0200\n"
 "PO-Revision-Date: 2006-08-06 14:57+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
@@ -97,12 +97,12 @@ msgid ""
 msgstr ""
 "Sie können die Host-Architektur (Gast-Architektur) spezifizieren, indem Sie "
 "eine oder beide der Optionen B<-a> oder B<-t> verwenden. Der Standardwert "
-"wird über einen externen Aufruf an B<gcc>(1) ermittelt oder ist identisch mit "
-"der Bauarchitektur, falls sowohl \\s-1CC\\s0 als auch Gcc nicht verfügbar "
-"sind. Einer von B<-a> oder B<-t> ist ausreichend, der Wert des anderen wird "
-"auf einen brauchbaren Wert gesetzt. Tatsächlich ist es oft besser nur einen "
-"der beiden anzugeben, da B<dpkg-architecture> Sie warnen wird, falls Ihre "
-"Wahl nicht mit dem Standardwert übereinstimmt."
+"wird über einen externen Aufruf an B<gcc>(1) ermittelt oder ist identisch "
+"mit der Bauarchitektur, falls sowohl \\s-1CC\\s0 als auch Gcc nicht "
+"verfügbar sind. Einer von B<-a> oder B<-t> ist ausreichend, der Wert des "
+"anderen wird auf einen brauchbaren Wert gesetzt. Tatsächlich ist es oft "
+"besser nur einen der beiden anzugeben, da B<dpkg-architecture> Sie warnen "
+"wird, falls Ihre Wahl nicht mit dem Standardwert übereinstimmt."
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-architecture.1:27
@@ -353,11 +353,11 @@ msgstr "Architektur-Platzhalter"
 msgid ""
 "An architecture wildcard is a special architecture string that will match "
 "any real architecture being part of it. The general form is E<lt>kernelE<gt>-"
-"E<lt>cpuE<gt>.  Examples: linux-any, linux-alpha, any-i386, hurd-any."
+"E<lt>cpuE<gt>.  Examples: linux-any, any-i386, hurd-any."
 msgstr ""
 "Ein Architektur-Platzhalter ist eine spezielle Architektur-Zeichenkette, die "
 "auf jede reale Architektur, die ein Teil davon ist, passt. Die allgemeine "
-"Form ist E<lt>KernE<gt>-E<lt>CPUE<gt>. Beispiele: linux-any, linux-alpha, "
+"Form ist E<lt>KernE<gt>-E<lt>CPUE<gt>. Beispiele: linux-any, "
 "any-i386, hurd-any."
 
 # type: IP
