--- a/man/po4a/dpkg-architecture.1/po/dpkg-architecture.1.pot
+++ b/man/po4a/dpkg-architecture.1/po/dpkg-architecture.1.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2006-08-05 22:28+0200\n"
+"POT-Creation-Date: 2006-08-06 15:40+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -318,8 +318,7 @@ msgstr ""
 msgid ""
 "An architecture wildcard is a special architecture string that will match "
 "any real architecture being part of it. The general form is "
-"E<lt>kernelE<gt>-E<lt>cpuE<gt>.  Examples: linux-any, linux-alpha, any-i386, "
-"hurd-any."
+"E<lt>kernelE<gt>-E<lt>cpuE<gt>.  Examples: linux-any, any-i386, hurd-any."
 msgstr ""
 
 # type: IP
