--- a/man/po4a/dpkg-divert.8/po/de.po
+++ b/man/po4a/dpkg-divert.8/po/de.po
@@ -319,9 +319,8 @@ msgstr "Um diese Umleitung zu entfernen:"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:103
-#, fuzzy
 msgid "dpkg-divert --rename --remove /usr/bin/example"
-msgstr "dpkg-divert --rename --remove /usr/bin/example.foo"
+msgstr "dpkg-divert --rename --remove /usr/bin/example"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-divert.8:107
