--- a/man/po4a/dpkg-architecture.1/po/fr.po
+++ b/man/po4a/dpkg-architecture.1/po/fr.po
@@ -4,7 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-08-05 22:28+0200\n"
+"POT-Creation-Date: 2006-08-06 15:40+0200\n"
 "PO-Revision-Date: 2006-08-05 15:02+0200\n"
 "Last-Translator: Nicolas François <nicolas.francois@centraliens.net>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
@@ -356,11 +356,11 @@ msgstr "Architecture joker"
 msgid ""
 "An architecture wildcard is a special architecture string that will match "
 "any real architecture being part of it. The general form is E<lt>kernelE<gt>-"
-"E<lt>cpuE<gt>.  Examples: linux-any, linux-alpha, any-i386, hurd-any."
+"E<lt>cpuE<gt>.  Examples: linux-any, any-i386, hurd-any."
 msgstr ""
 "Une architecture joker est une architecture spéciale qui correspond à toutes "
 "les architectures réelles qui en font partie. Il est en général de la forme "
-"E<lt>noyauE<gt>-E<lt>processeurE<gt>. Par exemple : linux-any, linux-alpha, "
+"E<lt>noyauE<gt>-E<lt>processeurE<gt>. Par exemple : linux-any, "
 "any-i386, hurd-any."
 
 # type: IP
