Fix a formatting issue in the dpkg-architecture.1 man page and regenerate the POT and POs.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,7 +1,7 @@
 2006-08-05  Nicolas Francois  <nicolas.francois@centraliens.net>
 
 	* C/dpkg-architecture.1: Remove linux-alpha from the architecture
-	wildcard examples.
+	wildcard examples, and fix a formatting issue.
 	* man/po4a/dpkg-architecture.1/po/dpkg-architecture.1.pot: Regenerated.
 	* man/po4a/dpkg-architecture.1/po/*.po: Merge with pot file.
 
