--- a/man/po4a/dpkg-architecture.1/po/de.po
+++ b/man/po4a/dpkg-architecture.1/po/de.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-08-06 15:40+0200\n"
+"POT-Creation-Date: 2006-08-06 15:56+0200\n"
 "PO-Revision-Date: 2006-08-06 14:57+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
@@ -142,14 +142,14 @@ msgstr "B<-f>"
 #: ../../../man/po4a/../C/dpkg-architecture.1:41
 msgid ""
 "Values set by existing environment variables with the same name as used by "
-"the scripts are honored (i.e. used by BE<lt>dpkg-architectureE<gt>), except "
-"if this force flag is present. This allows the user to override a value even "
-"when the call to B<dpkg-architecture> is buried in some other script (for "
-"example B<dpkg-buildpackage>(1))."
+"the scripts are honored (i.e. used by B<dpkg-architecture>), except if this "
+"force flag is present. This allows the user to override a value even when "
+"the call to B<dpkg-architecture> is buried in some other script (for example "
+"B<dpkg-buildpackage>(1))."
 msgstr ""
 "Existierende Umgebungsvariablen mit dem gleichen Namen wie vom Skript "
-"verwendet werden nicht überschrieben (d.h. sie werden von BE<lt>dpkg-"
-"architectureE<gt> verwendet), es sei denn, die »force«-Markierung ist "
+"verwendet werden nicht überschrieben (d.h. sie werden von B<dpkg-"
+"architecture> verwendet), es sei denn, die »force«-Markierung ist "
 "gesetzt. Dies erlaubt es dem Benutzer einen Wert zu überschreiben, selbst "
 "wenn der Aufruf von B<dpkg-architecture> tief in einem anderen Skript "
 "versteckt ist (beispielsweise B<dpkg-buildpackage>(1))."
@@ -357,8 +357,8 @@ msgid ""
 msgstr ""
 "Ein Architektur-Platzhalter ist eine spezielle Architektur-Zeichenkette, die "
 "auf jede reale Architektur, die ein Teil davon ist, passt. Die allgemeine "
-"Form ist E<lt>KernE<gt>-E<lt>CPUE<gt>. Beispiele: linux-any, "
-"any-i386, hurd-any."
+"Form ist E<lt>KernE<gt>-E<lt>CPUE<gt>. Beispiele: linux-any, any-i386, hurd-"
+"any."
 
 # type: IP
 #: ../../../man/po4a/../C/dpkg-architecture.1:95
