--- a/man/po4a/dpkg-architecture.1/po/fr.po
+++ b/man/po4a/dpkg-architecture.1/po/fr.po
@@ -4,7 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-08-06 15:40+0200\n"
+"POT-Creation-Date: 2006-08-06 15:56+0200\n"
 "PO-Revision-Date: 2006-08-05 15:02+0200\n"
 "Last-Translator: Nicolas François <nicolas.francois@centraliens.net>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
@@ -144,10 +144,10 @@ msgstr "B<-f>"
 #, fuzzy
 msgid ""
 "Values set by existing environment variables with the same name as used by "
-"the scripts are honored (i.e. used by BE<lt>dpkg-architectureE<gt>), except "
-"if this force flag is present. This allows the user to override a value even "
-"when the call to B<dpkg-architecture> is buried in some other script (for "
-"example B<dpkg-buildpackage>(1))."
+"the scripts are honored (i.e. used by B<dpkg-architecture>), except if this "
+"force flag is present. This allows the user to override a value even when "
+"the call to B<dpkg-architecture> is buried in some other script (for example "
+"B<dpkg-buildpackage>(1))."
 msgstr ""
 "Les variables d'environnement ayant le même nom que celles utilisées par les "
 "scripts ne sont pas écrasées, sauf si cette option est présente. Ceci permet "
@@ -360,8 +360,8 @@ msgid ""
 msgstr ""
 "Une architecture joker est une architecture spéciale qui correspond à toutes "
 "les architectures réelles qui en font partie. Il est en général de la forme "
-"E<lt>noyauE<gt>-E<lt>processeurE<gt>. Par exemple : linux-any, "
-"any-i386, hurd-any."
+"E<lt>noyauE<gt>-E<lt>processeurE<gt>. Par exemple : linux-any, any-i386, "
+"hurd-any."
 
 # type: IP
 #: ../../../man/po4a/../C/dpkg-architecture.1:95
