--- a/man/po4a/dpkg-architecture.1/po/dpkg-architecture.1.pot
+++ b/man/po4a/dpkg-architecture.1/po/dpkg-architecture.1.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2006-08-06 15:40+0200\n"
+"POT-Creation-Date: 2006-08-06 15:56+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -130,10 +130,10 @@ msgstr ""
 #: ../../../man/po4a/../C/dpkg-architecture.1:41
 msgid ""
 "Values set by existing environment variables with the same name as used by "
-"the scripts are honored (i.e. used by BE<lt>dpkg-architectureE<gt>), except "
-"if this force flag is present. This allows the user to override a value even "
-"when the call to B<dpkg-architecture> is buried in some other script (for "
-"example B<dpkg-buildpackage>(1))."
+"the scripts are honored (i.e. used by B<dpkg-architecture>), except if this "
+"force flag is present. This allows the user to override a value even when "
+"the call to B<dpkg-architecture> is buried in some other script (for example "
+"B<dpkg-buildpackage>(1))."
 msgstr ""
 
 # type: SH
