Update the French translation of dpkg-architecture.1.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -4,6 +4,7 @@
 	wildcard examples, and fix a formatting issue.
 	* man/po4a/dpkg-architecture.1/po/dpkg-architecture.1.pot: Regenerated.
 	* man/po4a/dpkg-architecture.1/po/*.po: Merge with pot file.
+	* man/po4a/dpkg-architecture.1/po/fr.po: Update to 116t.
 
 2006-08-05  Helge Kreutzmann  <debian@helgefjell.de>
 
