--- a/man/po4a/dpkg-architecture.1/po/fr.po
+++ b/man/po4a/dpkg-architecture.1/po/fr.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-08-06 15:56+0200\n"
-"PO-Revision-Date: 2006-08-05 15:02+0200\n"
+"PO-Revision-Date: 2006-08-06 16:02+0200\n"
 "Last-Translator: Nicolas François <nicolas.francois@centraliens.net>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -141,19 +141,19 @@ msgstr "B<-f>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-architecture.1:41
-#, fuzzy
 msgid ""
 "Values set by existing environment variables with the same name as used by "
-"the scripts are honored (i.e. used by B<dpkg-architecture>), except if this "
-"force flag is present. This allows the user to override a value even when "
-"the call to B<dpkg-architecture> is buried in some other script (for example "
-"B<dpkg-buildpackage>(1))."
+"the scripts are honored (i.e. used by B<dpkg-architecture>), except "
+"if this force flag is present. This allows the user to override a value even "
+"when the call to B<dpkg-architecture> is buried in some other script (for "
+"example B<dpkg-buildpackage>(1))."
 msgstr ""
-"Les variables d'environnement ayant le même nom que celles utilisées par les "
-"scripts ne sont pas écrasées, sauf si cette option est présente. Ceci permet "
-"à un utilisateur de surcharger une valeur même lorsque l'appel à B<dpkg-"
-"architecture> est inclus dans un autre script (par exemple B<dpkg-"
-"buildpackage>(1))."
+"Les valeurs positionnées par les variables d'environnement ayant le même "
+"nom que celles utilisées par les scripts sont prises en compte "
+"(c'est-à-dire utilisée par B<dpkg-architecture>), sauf si cette option est "
+"présente. Ceci permet à un utilisateur de surcharger une valeur même "
+"lorsque l'appel à B<dpkg-architecture> est inclus dans un autre script "
+"(par exemple B<dpkg-buildpackage>(1))."
 
 # type: SS
 #: ../../../man/po4a/../C/dpkg-architecture.1:42
@@ -184,7 +184,6 @@ msgstr "B<-e>I<architecture-debian>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-architecture.1:53
-#, fuzzy
 msgid ""
 "Check for equality of architecture. By default I<debian-architecture> is "
 "compared against the current Debian architecture, being the host.  This "
@@ -193,7 +192,7 @@ msgid ""
 msgstr ""
 "Vérifie l'égalité d'architectures. Par défaut, I<architecture-debian> est "
 "comparée à l'architecture Debian actuelle, qui est celle de la machine hôte. "
-"Cette option ne développe pas les architectures joker. La commande quitte "
+"Cette action ne développe pas les architectures joker. La commande quitte "
 "avec un code de retour de 0 si l'architecture correspond et de 1 dans le cas "
 "contraire."
 
@@ -217,7 +216,7 @@ msgstr ""
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-architecture.1:59
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-q>I<variable-name>"
 msgstr "B<-q>I<nom-de-variable>"
 
@@ -360,8 +359,8 @@ msgid ""
 msgstr ""
 "Une architecture joker est une architecture spéciale qui correspond à toutes "
 "les architectures réelles qui en font partie. Il est en général de la forme "
-"E<lt>noyauE<gt>-E<lt>processeurE<gt>. Par exemple : linux-any, any-i386, "
-"hurd-any."
+"E<lt>noyauE<gt>-E<lt>processeurE<gt>. Par exemple : linux-any, "
+"any-i386, hurd-any."
 
 # type: IP
 #: ../../../man/po4a/../C/dpkg-architecture.1:95
@@ -408,11 +407,10 @@ msgstr "eval \\`dpkg-architecture CW<\\*(C`-u\\*(C'>\\`"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-architecture.1:110
-#, fuzzy
 msgid ""
 "Check if an architecture is equal to the current architecture or a given one:"
 msgstr ""
-"Vérifie si l'architecture actuelle ou celle spécifiée sont identiques :"
+"Vérifie si une architecture est identique à l'architecture actuelle ou à celle spécifiée :"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-architecture.1:112
@@ -426,12 +424,12 @@ msgstr "dpkg-architecture -amips -elinux-mips"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-architecture.1:117
-#, fuzzy
 msgid ""
 "Check if the current architecture or an architecture provided with -a are "
 "Linux systems:"
 msgstr ""
-"Vérifie si l'architecture actuelle ou celle spécifiée est un système Linux :"
+"Vérifie si l'architecture actuelle ou celle spécifiée avec -a correspond "
+"à un système Linux :"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-architecture.1:119
@@ -517,7 +515,6 @@ msgstr "\\s-1DEB_BUILD_GNU_SYSTEM\\s0"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-architecture.1:136
-#, fuzzy
 msgid "The System part of \\s-1DEB_BUILD_GNU_TYPE\\s0."
 msgstr "Partie « système » de \\s-1DEB_BUILD_GNU_TYPE\\s0."
 
@@ -573,7 +570,6 @@ msgstr "\\s-1DEB_HOST_GNU_CPU\\s0"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-architecture.1:146
-#, fuzzy
 msgid "The \\s-1CPU\\s0 part of \\s-1DEB_HOST_GNU_TYPE\\s0."
 msgstr "Partie « processeur » de \\s-1DEB_HOST_GNU_TYPE\\s0."
 
@@ -585,7 +581,6 @@ msgstr "\\s-1DEB_HOST_GNU_SYSTEM\\s0"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-architecture.1:148
-#, fuzzy
 msgid "The System part of \\s-1DEB_HOST_GNU_TYPE\\s0."
 msgstr "Partie « système » de \\s-1DEB_HOST_GNU_TYPE\\s0."
 
@@ -698,7 +693,6 @@ msgstr ""
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-architecture.1:202
-#, fuzzy
 msgid ""
 "In general, calling dpkg in the rules file to get architecture information "
 "is deprecated (unless you want to provide backward compatibility, see "
