Fix two typos in the German translation. Thanks to Jörg Sommer and Sven Joachim.

--- a/po/de.po
+++ b/po/de.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: Debian dpkg 1.13.22\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-06-21 07:26+0300\n"
-"PO-Revision-Date: 2006-08-03 20:40+0200\n"
+"PO-Revision-Date: 2006-08-07 13:00+0200\n"
 "Last-Translator: Sven Joachim <svenjoac@gmx.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2925,7 +2925,7 @@ msgid ""
 msgstr ""
 "Gewünscht=Unbekannt/Installieren/R=Entfernen/P=Säubern/Halten\n"
 "| Status=Nicht/Installiert/Config/U=Entpackt/Fehlgeschl. Konf./Halb install.\n"
-"|/ Fehler?=(kein)/Halten/R=Neuinst notw/X=beides (Status, Fehler: GROß=schlecht)\n"
+"|/ Fehler?=(kein)/Halten/R=Neuinst notw/X=beide (Status, Fehler: GROSS=schlecht)\n"
 
 #: src/query.c:164
 msgid "Name"
@@ -4580,7 +4580,7 @@ msgstr "Kann keine Verzeichnisse umleiten"
 #: scripts/dpkg-divert.pl:138
 #, perl-format
 msgid "Leaving `%s'"
-msgstr "Verlasse »%s«"
+msgstr "Behalte »%s« bei"
 
 #: scripts/dpkg-divert.pl:141
 #, perl-format
