--- a/debian/changelog
+++ b/debian/changelog
@@ -15,7 +15,7 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   * Khmer (Khoem Sokhem). Closes: #375099
   * Basque (Piarres Beobide). Closes: #375118
   * Russian (Yuri Kozlov). Closes: #376746
-  * German (Sven Joachim). Closes: #381409
+  * German (Sven Joachim). Closes: #381409, #381740
 
   [ Updated man pages translations ]
   * German (Helge Kreutzmann). Closes: #379030
